課題１４を再提出

--- a/kada_014.ipynb
+++ b/kada_014.ipynb
@@ -16,24 +16,24 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5WqV0dZfz2hx",
-        "outputId": "4740c464-dc12-4f76-cec6-67294f83be01"
+        "outputId": "cc441fd0-8d14-4d79-94d0-d9191b8cebb6"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "300"
+              "330.0"
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 6
         }
       ],
       "source": [
@@ -42,9 +42,9 @@
         "\n",
         "def total():\n",
         "    tax = 1.1\n",
-        "    return price1 + price2\n",
+        "    return (price1 + price2) * tax\n",
         "\n",
-        "    print (total() * tax)\n",
+        "    print (total())\n",
         "\n",
         "total()\n"
       ]
@@ -53,7 +53,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "QEdPQ3Xw0JaV"
+        "id": "UAIarwpK1rLK"
       },
       "execution_count": null,
       "outputs": []
